// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSelector render::Collapsed 1`] = `
<div
  class="pf-c-dropdown pf-m-align-right"
  data-ouia-component-id="OUIA-Generated-Dropdown-1"
  data-ouia-component-type="PF4/Dropdown"
  data-ouia-safe="true"
  data-testid="action-selector"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="pf-c-dropdown__toggle"
    data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe="true"
    data-testid="action-selector__toggle"
    id="action-selector-id"
    type="button"
  >
    <span
      class="pf-c-dropdown__toggle-text"
    >
      Actions
    </span>
    <span
      class="pf-c-dropdown__toggle-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ActionSelector render::MenuItems 1`] = `
<div
  class="pf-c-dropdown pf-m-align-right pf-m-expanded"
  data-ouia-component-id="OUIA-Generated-Dropdown-2"
  data-ouia-component-type="PF4/Dropdown"
  data-ouia-safe="true"
  data-testid="action-selector"
>
  <button
    aria-expanded="true"
    aria-haspopup="true"
    class="pf-c-dropdown__toggle"
    data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
    data-ouia-component-type="PF4/DropdownToggle"
    data-ouia-safe="true"
    data-testid="action-selector__toggle"
    id="action-selector-id"
    type="button"
  >
    <span
      class="pf-c-dropdown__toggle-text"
    >
      Actions
    </span>
    <span
      class="pf-c-dropdown__toggle-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 320 512"
        width="1em"
      >
        <path
          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        />
      </svg>
    </span>
  </button>
  <ul
    aria-labelledby="action-selector-id"
    class="pf-c-dropdown__menu pf-m-align-right"
    role="menu"
  >
    <li
      role="menuitem"
    >
      <a
        aria-disabled="true"
        class="pf-m-disabled pf-c-dropdown__menu-item"
        data-ouia-component-id="OUIA-Generated-DropdownItem-1"
        data-ouia-component-type="PF4/DropdownItem"
        data-ouia-safe="true"
        tabindex="-1"
      >
        Create model
      </a>
    </li>
    <li
      role="menuitem"
    >
      <a
        aria-disabled="true"
        class="pf-m-disabled pf-c-dropdown__menu-item"
        data-ouia-component-id="OUIA-Generated-DropdownItem-2"
        data-ouia-component-type="PF4/DropdownItem"
        data-ouia-safe="true"
        tabindex="-1"
      >
        View Data Dictionary
      </a>
    </li>
  </ul>
</div>
`;
